# cog_converter

./: .gitignore  README.md  Taskfile.yaml  pyproject.toml  requests.http  sample_config.json  test_conversion.py
cog_converter/: __init__.py  __main__.py  advanced_engine.py  advanced_pipeline.py  config.py  engine.py  error_handler.py  file_discoverer.py  pipeline.py
cog_converter/converters/: base_converter.py  ecw_converter.py  geotiff_converter.py  worldimage_converter.py
cog_converter/storage/: __init__.py  blob_uploader.py  hash_utils.py  metadata_manager.py  sqlite_metadata_manager.py
cog_output/: North America_USA_99 Degree Tieline_FlightPath.tif
test_data/: North America_USA_99 Degree Tieline_FlightPath.tif
tests/: test_conversion.py  test_storage_integration.py
